--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Me -->
     <section class="myclass aling-items-stretch">
         <div class="myclass-main d-flex flex-column justify-content-center aling-items-center">
-            <img class="myclass-pic rounded-circle" src="./images/favicon.png" alt="My selfie">
+            <img class="myclass-pic rounded-circle" src="./images/yoElegante.jpg" alt="My selfie">
             <h1>Hola, soy Eros</h1>
             <h2>El C papu programador :v</h2>
         </div>
