--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2>El C papu programador :v</h2>
         </div>
         <div class="myclass-label">            
-            <img class="myclass-imagen img-fluid" src="./images/undraw_code_thinking.svg" alt="think twice code once">
+            <img class="myclass-imagen img-fluid" src="./images/arthurDiseñador.png" alt="think twice code once">
         </div>
     </section>
 
