--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <!-- About me -->
     <section id="aboutme" class="about-me section-oscura">
         <div class="contenedor">
-            <h2 class="seccion-titulo">Conoce a Solrac</h2>
+            <h2 class="seccion-titulo">Sobre mi</h2>
             <p class="seccion-texto">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere quod, dolorum rerum quas dolorem obcaecati eos nobis id. Quidem ea soluta necessitatibus nobis iure aspernatur ratione porro qui delectus odit.
+                Soy Eros, desarrollador web "En desarrollo", me gusta programar, jugar videojuegos, hacer música e ir al gimnasio.
             </p>
         </div>
     </section>
