re edicion de abot me

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="contenedor">
             <h2 class="seccion-titulo">Sobre mi</h2>
             <p class="seccion-texto">
-                Soy Eros, desarrollador web "En desarrollo", me gusta programar, jugar videojuegos, hacer música e ir al gimnasio.
+                Soy Eros, desarrollador web "En desarrollo", me gusta programar, jugar videojuegos y hacer musica.
             </p>
         </div>
     </section>
