--- a/index.html
+++ b/index.html
@@ -80,28 +80,26 @@
             <div class="row">
                 <!-- Programming -->
                 <div class="experiencia-columna col-12 col-md-4">                    
-                    <p class="columna experiencia-title">Programming</p>                    
+                    <p class="columna experiencia-title">Programación</p>                    
                     <i class="bi-braces"></i>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim maiores deserunt aliquam facere. 
+                        experiencia en programacion con varios lenguajes como, C y Java.
                     </p>
                     <div class="badge-contenedor">                        
-                        <span class="badge bg-primary">PHP</span>
                         <span class="badge bg-primary">C</span>
                         <span class="badge bg-primary">Java</span>                        
                     </div>
                 </div>
                 <!-- Design -->
                 <div class="experiencia-columna col-12 col-md-4">                    
-                    <p class="columna experiencia-title">Design</p>
+                    <p class="columna experiencia-title">desarrollo</p>
                     <i class="bi-window-desktop"></i>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim maiores deserunt aliquam facere. 
+                        Poca experiencia en desarrollo web, tomando mi primer curso.
                     </p>
                     <div class="badge-contenedor">                        
-                        <span class="badge bg-primary">UX</span>                        
-                        <span class="badge bg-primary">Usability</span>
-                        <span class="badge bg-primary">UI</span>                        
+                        <span class="badge bg-primary">HTML</span>                        
+                        <span class="badge bg-primary">JavaScript</span>                     
                     </div>
                 </div>
                 <!-- Management -->
